# simple-gr

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.txt
cmake/: CompilerWarnings.cmake
src/: IO.cpp  MazeRouter.cpp  SimpleGR.cpp  SimpleGR.h  Utils.cpp  main.cpp  mapper.cpp
